--- a/main.css
+++ b/main.css
@@ -25,7 +25,6 @@ ul {
   margin: 0;
 }
 
-
 /*
  *
  * Common
@@ -54,22 +53,28 @@ ul {
 
 .header__inner {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-width: 600px) {
+  .header__inner {
+    align-items: baseline;
+  }
 }
 
 .header__logo {
   height: 72px;
   margin-right: 1em;
-  vertical-align: top;
-  margin-top: 12px;
 }
 
 .header__title {
   font-weight: 300;
   font-size: 4em;
-  margin: 0.5em 0.25em;
-  display: inline-block;
+  margin: 0 0.25em;
   color: #212121;
 }
 
@@ -168,7 +173,6 @@ main {
  */
 
 .top-news {
-  height: 300px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
 }
@@ -363,11 +367,6 @@ footer ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
-
-footer li {
-  display: inline-block;
-  margin: 0 1em;
 }
 
 footer a {
